--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
         "log"
     ],
     "require": {
-        "illuminate/support": "^9.0|^10.0|^11.0",
-        "illuminate/events": "^9.0|^10.0|^11.0",
+        "doctrine/dbal": "^3.5",
         "illuminate/database": "^9.0|^10.0|^11.0",
-        "illuminate/routing": "^9.0|^10.0|^11.0",
-        "illuminate/view": "^9.0|^10.0|^11.0",
+        "illuminate/events": "^9.0|^10.0|^11.0",
         "illuminate/mail": "^9.0|^10.0|^11.0",
-        "doctrine/dbal": "^3.5"
+        "illuminate/routing": "^9.0|^10.0|^11.0",
+        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/view": "^9.0|^10.0|^11.0",
+        "php-mime-mail-parser/php-mime-mail-parser": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0|^8.0|^9.0"
